--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
           </div>
         </div>
       <% else %>
-        <%= link_to 'Sign in with Google', '/auth/google_oauth2', class: 'btn btn-primary' %>
+        <%= button_to 'Sign in with Google', auth_path(:google_oauth2), class: 'btn btn-primary', data: { turbo: false } %>
       <% end %>
     </div>
   </div>
